--- a/frontend/src/pages/index/_header.pug
+++ b/frontend/src/pages/index/_header.pug
@@ -1,4 +1,32 @@
 section.header
     ._container._row
-        h1._col-12
-            | Caption
+        .header__logoWpapper
+            ._col-4.header__logoWpapper_logo
+                include ../../svg/logo.svg
+        .header__sloaganWrapper
+            ._col-1
+            ._col-10.header__sloagan
+                p Откройте свой собственный диагностический центр "3D DENTAL" с ежемесячной прибылью 
+                    span от 2.500.000 тенге 
+
+        .header__investment 
+            ._col-1
+            ._col-5
+                p Инвестиции: от 26.000.000 тенге
+        .header__listDescription
+            ._col-1
+            ._col-9.header__listDescription_wrapper
+                .header__listDescription_item._col-6 
+                    h3 Отсутствие фактора сезонности 
+                    span спрос на услуги круглый год
+                .header__listDescription_item._col-6 
+                    h3 Проверенный бизнес 
+                    span на основе 15 летнего опыта в стоматологической сфере
+                .header__listDescription_item._col-6 
+                    h3 Широкий возрастной диапазон
+                    span взрослые и дети от 6 лет
+        .header__buttonDownload_wrapper
+            ._col-1
+            .header__buttonDownload Скачать презентацию
+        
+                
