--- a/frontend/src/pages/index/_header.pug
+++ b/frontend/src/pages/index/_header.pug
@@ -1,32 +1,35 @@
 section.header
-    ._container._row
-        .header__logoWpapper
-            ._col-4.header__logoWpapper_logo
-                include ../../svg/logo.svg
-        .header__sloaganWrapper
-            ._col-1
-            ._col-10.header__sloagan
-                p Откройте свой собственный диагностический центр "3D DENTAL" с ежемесячной прибылью 
-                    span от 2.500.000 тенге 
-
-        .header__investment 
-            ._col-1
-            ._col-5
-                p Инвестиции: от 26.000.000 тенге
-        .header__listDescription
-            ._col-1
-            ._col-9.header__listDescription_wrapper
-                .header__listDescription_item._col-6 
-                    h3 Отсутствие фактора сезонности 
-                    span спрос на услуги круглый год
-                .header__listDescription_item._col-6 
-                    h3 Проверенный бизнес 
-                    span на основе 15 летнего опыта в стоматологической сфере
-                .header__listDescription_item._col-6 
-                    h3 Широкий возрастной диапазон
-                    span взрослые и дети от 6 лет
-        .header__buttonDownload_wrapper
-            ._col-1
-            .header__buttonDownload Скачать презентацию
+    ._container._row._s
+        ._col-12._col-lg-10._offset-lg-1._row._ptb-n.header__logoWpapper
+            img.header__logo(src="../svg/logo.svg")
+        h1._col-12._col-lg-10._offset-lg-1.header__caption
+            | Откройте свой собственный
+            br
+            | диагностический центр &laquo;3D&nbsp;DENTAL&raquo;
+            br
+            | с&nbsp;ежемесячной прибылью
+            span._g  от&nbsp;2.500.000 тенге
+        ._col-12._col-lg-10._offset-lg-1.header__investment._g
+            | Инвестиции: от&nbsp;26.000.000 тенге
+        ._col-12._col-lg-8._offset-lg-1._row._p-n
+            .header__text-item._col-12._col-md-6
+                | Отсутствие фактора сезонности
+                br
+                span.header__text-small
+                    |спрос на&nbsp;услуги круглый год
+            .header__text-item._col-12._col-md-6
+                | Проверенный бизнес
+                br
+                span.header__text-small
+                    | на&nbsp;основе 15&nbsp;летнего опыта
+                    br
+                    | в&nbsp;стоматологической сфере
+            .header__text-item._col-12._col-md-6
+                | Широкий возрастной диапазон
+                br
+                span.header__text-small
+                    | взрослые и&nbsp;дети от&nbsp;6&nbsp;лет
+        ._col-12._col-lg-10._offset-lg-1._ptb-n.header__buttonDownload
+            button.button Скачать презентацию
         
                 
