--- a/frontend/src/sass/layout/_header.scss
+++ b/frontend/src/sass/layout/_header.scss
@@ -1,97 +1,45 @@
 .header {
-  width: 1920px;
-  height: 802px;
+  padding: 88px 0 130px;
   background-image: url("../img/header-bg.jpg");
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  &__caption {
+    padding-top: 79px;
+    padding-bottom: 24px;
+  }
   &__logoWpapper {
-    width: inherit;
-    display: flex;
     justify-content: flex-end;
-    &_logo {
-      margin-top: 88px;
-      padding: 0;
-      box-sizing: border-box;
-    }
   }
-  &__sloaganWrapper {
-    display: flex;
-  }
-  &__sloagan {
-    & p {
-      font-family: Lato;
-      font-size: 36px;
-      font-weight: 800;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      color: #ffffff;
-      & span {
-        color: #c49a6c;
-      }
-    }
+  &__logo {
+    width: 100%;
+    max-width: 350px;
   }
   &__investment {
-    width: inherit;
-    display: flex;
-    p {
-      font-family: Lato;
-      font-size: 24px;
+      font-size: 1.5rem;
       font-weight: 600;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      color: #d3ab72;
+  }
+  &__text-item {
+    position: relative;
+    font-weight: 800;
+    padding-left: 26px;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      left: 15px;
+      top: 17px;
+      bottom: 17px;
+      width: 2px;
+      background-color: #d3ab72;
     }
   }
-  &__listDescription {
-    width: inherit;
-    display: flex;
-    &_wrapper {
-      display: flex;
-      flex-wrap: wrap;
-     
-    }
-    &_item {
-      & h3 {
-        font-family: Lato;
-        font-size: 18px;
-        font-weight: 800;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        color: #ffffff;
-        border-left: 2px solid #d3ab72;
-      }
-      & span {
-        font-size: 14px;
-        font-weight: normal;
-        border-left: 2px solid #d3ab72;
-      }
-    }
+  &__text-small {
+    font-size: 0.875rem;
+    font-weight: normal;
+    font-style: italic;
   }
   &__buttonDownload {
-      &_wrapper {
-          width: inherit;
-          display: flex;
-      }
-    width: 351px;
-    height: 60px;
-    border-radius: 6px;
-    background-image: linear-gradient(to top, #ffe1c0, #c6a874);
-
-    font-family: Lato;
-    font-size: 14px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #03264a;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-top: 40px;
   }
 }
