Edit default style

--- a/frontend/src/sass/_vars.scss
+++ b/frontend/src/sass/_vars.scss
@@ -1,16 +1,16 @@
 $default-font: 'Roboto', sans-serif;
 
-$background-color: #171a1f;
+$background-color: #ffffff;
 $p-background-color: #ffffff;
 
-$p-color: #3f5cb7;
-$s-color: #283593;
+$p-color: #03264a;
+$s-color: #ffffff;
 
-$p-active-color: #b7b7b7;
-$s-active-color: #b7b7b7;
+$p-active-color: #d3ab72;
+$s-active-color: #d3ab72;
 
 $p-icon-disable: #949bca;
 $p-icon-active: #ffffff;
 
-$p-text-color: #ffffff;
-$s-text-color: #171a1f;
+$p-text-color: #03264a;
+$s-text-color: #ffffff;
