--- a/frontend/src/pages/index/_header.pug
+++ b/frontend/src/pages/index/_header.pug
@@ -1,4 +1,4 @@
-section.header
+header.header
     ._container._row._s
         ._col-12._col-lg-10._offset-lg-1._row._ptb-n.header__logoWpapper
             img.header__logo(src="../svg/logo.svg")
@@ -32,4 +32,3 @@ section.header
         ._col-12._col-lg-10._offset-lg-1._ptb-n.header__buttonDownload
             button.button Скачать презентацию
         
-                
