--- a/frontend/src/pages/layout/_footer.pug
+++ b/frontend/src/pages/layout/_footer.pug
@@ -1,1 +1,22 @@
 footer.footer
+    ._container._row.footer__insider
+        h2._offset-lg-1
+            | На основе 30 летнего опыта мы знаем, 
+            br
+            | как сделать бизнес успешным!
+        h3._offset-lg-1
+            | Станьте нашим партнером «3D Dental» и начните 
+            br
+            | зарабатывать от 2 500 000 тенге в месяц!
+        input.input._offset-lg-1(type="text" placeholder="Ваше имя")    
+        input.input._offset-lg-1(type="tel" placeholder="Ваш телефон")    
+        input.input._offset-lg-1(type="email" placeholder="Ваш e-mail")    
+        button.button.footer__button._offset-lg-1 Связаться с франчайзером
+        ul.footer__contacts._row._offset-lg-1 
+            li._col-12._col-lg-6 Office.dent@bk.ru
+            li._col-12._col-lg-6 Казахстан
+            li._col-12._col-lg-6 8-701-141-71-38
+            li._col-12._col-lg-6 г. Нур-Султан
+            li._col-12._col-lg-6 www.3d-dental.kz
+            li._col-12._col-lg-6 ул. Кабанбай батыра, 12
+        
