--- a/frontend/src/pages/index/_benefit.pug
+++ b/frontend/src/pages/index/_benefit.pug
@@ -1,41 +1,50 @@
 .benefit
     ._container._row
-        .benefit__insider._row
-                ._offset-lg-1
-                    .benefit__insider_header
-                        | Основные моменты, почему выгодно 
-                        br
-                        | открыть свой собственный диагностический центр:
-                    ul.benefit__insider_items
-                        li.benefit__insider_item
-                            | По данным wordstat за 2017-2018 г. 
-                            span.span 
-                                | спрос 
-                                br
-                                | на стоматологические услуги вырос на 12%  
-                        li.benefit__insider_item
-                            span.span 
-                                | 90% пациентов стоматологических клиник направляются 
-                                br
-                                | в диагностические центры
-                        li.benefit__insider_item
-                            span.span
-                                | 97 % жителей страдают от заболеваний зубов, 
+        .benefit__wrapper._offset-lg-1._col-lg-10
+            .benefit__insider._row
+                    ._offset-lg-1
+                        .benefit__insider_header
+                            | Основные моменты, почему выгодно 
                             br
-                            | что является причиной посещения стоматолога
-                        li.benefit__insider_item
-                            span.span
-                                | Стоматология остается неизменным лидером 
-                            br
-                            | в топе коммерческой медицины с 2010 года
-                        li.benefit__insider_item
-                            span.span
-                                | Стоматологические услуги относятся к одному из самых 
+                            | открыть свой собственный диагностический центр:
+                        ul.benefit__insider_items
+                            li.benefit__insider_item
+                                | По данным wordstat за 2017-2018 г. 
+                                span.span 
+                                    | спрос 
+                                    br
+                                    | на стоматологические услуги вырос на 12%  
+                            li.benefit__insider_item
+                                span.span 
+                                    | 90% пациентов стоматологических клиник направляются 
+                                    br
+                                    | в диагностические центры
+                            li.benefit__insider_item
+                                span.span
+                                    | 97 % жителей страдают от заболеваний зубов, 
                                 br
-                                | прибыльных видов бизнеса 
-                            | в сфере оказания медицинских услуг
-                        li.benefit__insider_item
-                            span.span
-                                | Данный вид бизнеса можно передавать по наследству, 
+                                | что является причиной посещения стоматолога
+                            li.benefit__insider_item
+                                span.span
+                                    | Стоматология остается неизменным лидером 
                                 br
-                            | поскольку стоматологические услуги всегда были и будут востребованы
+                                | в топе коммерческой медицины с 2010 года
+                            li.benefit__insider_item
+                                span.span
+                                    | Стоматологические услуги относятся к одному из самых 
+                                    br
+                                    | прибыльных видов бизнеса 
+                                | в сфере оказания медицинских услуг
+                            li.benefit__insider_item
+                                span.span
+                                    | Данный вид бизнеса можно передавать по наследству, 
+                                    br
+                                | поскольку стоматологические услуги всегда были и будут востребованы
+        .benefit__footer._offset-lg-1._col-lg-10
+            | Чтобы построить успешный бизнес, без проб и ошибок, 
+            br
+            | станьте партнером надежной компании "3D Dental". Мы готовы 
+            br 
+            | поделиться с Вами 30-летним опытом, знаниями и фишками ведения 
+            br 
+            | всех бизнес-процессов
