--- a/frontend/src/sass/layout/main.scss
+++ b/frontend/src/sass/layout/main.scss
@@ -1,4 +1,7 @@
 @import "header";
 @import "about";
 @import "benefit";
+@import "conditions";
+@import "package";
+@import "steps";
 @import "footer";
