--- a/frontend/src/pages/index.pug
+++ b/frontend/src/pages/index.pug
@@ -4,3 +4,7 @@ block content
     include index/_header
     include index/_about
     include index/_benefit
+    include index/_conditions
+    include index/_package
+    include index/_steps
+    
