--- a/frontend/src/pages/index/_steps.pug
+++ b/frontend/src/pages/index/_steps.pug
@@ -1,37 +1,35 @@
-._container._row
-    .steps._offset-lg-1._col-lg-10._row
-        .steps__header 
-            | Основные шаги для открытия высокорентабельного бизнеса:
-        .steps__itemsWrap._row 
-            .steps__item.steps__item_short 
-                .steps__item_arrow
-                    img.steps__item_arrow_img(src="../svg/Vector.svg")
+section.steps
+    ._container._row
+        ._offset-lg-1._col-lg-10
+            h3.steps__caption
+                | Основные шаги для открытия высокорентабельного бизнеса:
+        ._col-md-6._col-lg-3._offset-lg-1._i1
+            .steps__item._s._right._md-right
                 | Подписание договора
-            .steps__item.steps__item_long 
-                .steps__item_arrow
-                    img.steps__item_arrow_img(src="../svg/Vector.svg")
+        ._col-md-6._col-lg-4._i2
+            .steps__item._s._right._md-bot
                 | Запуск рекламной кампании
-            .steps__item.steps__item_short 
+        ._col-md-6._col-lg-3._i3
+            .steps__item._s._bot._md-left
                 | Поиск помещения
-            .steps__item.steps__item_long 
-                .steps__item_arrow
-                    img.steps__item_arrow_img.steps__item_arrow_img_right(src="../svg/Vector.svg")
+        ._col-md-6._col-lg-4._offset-lg-1._i6
+            .steps__item._s._bot
                 | Покупка всего оборудования
-            .steps__item.steps__item_short 
-                .steps__item_arrow
-                        img.steps__item_arrow_img.steps__item_arrow_img_right(src="../svg/Vector.svg")
-                | Регистрация юр. лица
-            .steps__item.steps__item_short 
+        ._col-md-6._col-lg-3._i5
+            .steps__item._s._left._md-right
+                | Регистрация&nbsp;юр. лица
+        ._col-md-6._col-lg-3._i4
+            .steps__item._s._left._md-bot
                 | Проведение ремонта
-            .steps__item.steps__item_long 
-                .steps__item_arrow
-                        img.steps__item_arrow_img(src="../svg/Vector.svg")
+        ._col-md-6._col-lg-4._offset-lg-1._i7
+            .steps__item._s._right._md-left
                 | Лицензирование бизнеса
-            .steps__item.steps__item_verylong 
-                | Поиск квалифицированного персонала и обучение
-            .steps__item.steps__item_long 
-                .steps__item_arrow
-                        img.steps__item_arrow_img.steps__item_arrow_img_right(src="../svg/Vector.svg")
+        ._col-md-6._col-lg-6._i8
+            .steps__item._s._bot._big
+                | Поиск квалифицированного персонала и&nbsp;обучение
+        ._col-md-6._col-lg-4._offset-lg-4._i10
+            .steps__item._s._last
                 | Получение прибыли
-            .steps__item.steps__item_short 
+        ._col-md-6._col-lg-3._i9
+            .steps__item._s._left._md-right
                 | Открытие центра
