--- a/frontend/src/pages/index/_package.pug
+++ b/frontend/src/pages/index/_package.pug
@@ -1,31 +1,34 @@
-._container._row
-    .package._offset-lg-1._col-lg-10._row   
-        .package__insider._offset-lg-1
-            .package__insider_text 
-                | Пакет  эксклюзив
-            .package__insider_headerItems 
-                | Пакет первоначальный + 
-            ul.package__insider_items
-                li.package__insider_item
-                    | Рекомендованный список  поставщиков и консультации 
-                    br
-                    | по покупке оборудования
-                li.package__insider_item
-                    | Обучение персонала: консультационная 
-                    br
-                    | и образовательная поддержка до и после открытия центра
-                li.package__insider_item
-                    | Рекомендации по рекламе и маркетингу — описание всех 
-                    br
-                    | инструментов, за счет которых франчайзер привлекает клиентов
-                li.package__insider_item
-                    | Юридическая поддержка 
-                li.package__insider_item
-                    | Эксклюзив на город
-             
-            .package__insider_text 
-                | Паушальный взнос 6.000.000 тенге
-            .package__insider_text 
-                | Роялти с 3 месяца 13%
-            button.button
-                | Задать вопрос
+section.package._s
+    ._container._row
+        ._offset-lg-1._col-lg-10._ptb-n
+            .package__box
+                .package__ellipse
+                h3.package__caption
+                    | Пакет  эксклюзив
+                .package__text._first
+                    | Пакет первоначальный +
+                ul.package__list
+                    li.package__item
+                        | Рекомендованный список  поставщиков и консультации
+                        br
+                        | по покупке оборудования
+                    li.package__item
+                        | Обучение персонала: консультационная
+                        br
+                        | и образовательная поддержка до и после открытия центра
+                    li.package__item
+                        | Рекомендации по рекламе и маркетингу — описание всех
+                        br
+                        | инструментов, за счет которых франчайзер привлекает клиентов
+                    li.package__item
+                        | Юридическая поддержка
+                    li.package__item
+                        | Эксклюзив на город
+
+                .package__text
+                    | Паушальный взнос 6.000.000 тенге
+                .package__text
+                    | Роялти с 3 месяца 13%
+                .package__btn-box
+                    button.button
+                        | Задать вопрос
