--- a/frontend/src/pages/index/_benefit.pug
+++ b/frontend/src/pages/index/_benefit.pug
@@ -1,50 +1,47 @@
-.benefit
+section.benefit
     ._container._row
-        .benefit__wrapper._offset-lg-1._col-lg-10
-            .benefit__insider._row
-                    ._offset-lg-1
-                        .benefit__insider_header
-                            | Основные моменты, почему выгодно 
+        ._offset-lg-1._col-lg-10._ptb-n
+            .benefit__insider-box
+                .benefit__insider._row
+                    h3._col-12.benefit__caption
+                        | Основные моменты, почему выгодно
+                        br
+                        | открыть свой собственный диагностический центр:
+                    ._col-12.benefit__item
+                        | По&nbsp;данным wordstat за&nbsp;2017-2018&nbsp;г.
+                        span.benefit__strong
+                            |  спрос
                             br
-                            | открыть свой собственный диагностический центр:
-                        ul.benefit__insider_items
-                            li.benefit__insider_item
-                                | По данным wordstat за 2017-2018 г. 
-                                span.span 
-                                    | спрос 
-                                    br
-                                    | на стоматологические услуги вырос на 12%  
-                            li.benefit__insider_item
-                                span.span 
-                                    | 90% пациентов стоматологических клиник направляются 
-                                    br
-                                    | в диагностические центры
-                            li.benefit__insider_item
-                                span.span
-                                    | 97 % жителей страдают от заболеваний зубов, 
-                                br
-                                | что является причиной посещения стоматолога
-                            li.benefit__insider_item
-                                span.span
-                                    | Стоматология остается неизменным лидером 
-                                br
-                                | в топе коммерческой медицины с 2010 года
-                            li.benefit__insider_item
-                                span.span
-                                    | Стоматологические услуги относятся к одному из самых 
-                                    br
-                                    | прибыльных видов бизнеса 
-                                | в сфере оказания медицинских услуг
-                            li.benefit__insider_item
-                                span.span
-                                    | Данный вид бизнеса можно передавать по наследству, 
-                                    br
-                                | поскольку стоматологические услуги всегда были и будут востребованы
-        .benefit__footer._offset-lg-1._col-lg-10
-            | Чтобы построить успешный бизнес, без проб и ошибок, 
-            br
-            | станьте партнером надежной компании "3D Dental". Мы готовы 
-            br 
-            | поделиться с Вами 30-летним опытом, знаниями и фишками ведения 
-            br 
-            | всех бизнес-процессов
+                            | на&nbsp;стоматологические услуги вырос на&nbsp;12%
+                    ._col-12.benefit__item
+                        span.benefit__strong
+                            | 90% пациентов стоматологических клиник направляются
+                            br
+                            | в&nbsp;диагностические центры
+                    ._col-12.benefit__item
+                        span.benefit__strong
+                            | 97% жителей страдают от&nbsp;заболеваний зубов,
+                        br
+                        | что является причиной посещения стоматолога
+                    ._col-12.benefit__item
+                        span.benefit__strong
+                            | Стоматология остается неизменным лидером
+                        br
+                        | в&nbsp;топе коммерческой медицины с&nbsp;2010 года
+                    ._col-12.benefit__item
+                        span.benefit__strong
+                            | Стоматологические услуги относятся к&nbsp;одному из&nbsp;самых
+                            br
+                            | прибыльных видов бизнеса
+                        |  в&nbsp;сфере оказания медицинских услуг
+                    ._col-12.benefit__item
+                        span.benefit__strong
+                            | Данный вид бизнеса можно передавать по&nbsp;наследству,
+                        br
+                        | поскольку стоматологические услуги всегда были и&nbsp;будут востребованы
+        .benefit__ellipse._offset-lg-1._col-lg-10._ptb-n
+            .benefit__footer.body0
+                | Чтобы построить успешный бизнес, без проб и&nbsp;ошибок, станьте
+                | партнером надежной компании &laquo;3D&nbsp;Dental&raquo;. Мы&nbsp;готовы
+                | поделиться с&nbsp;Вами 30-летним опытом, знаниями и&nbsp;фишками
+                | ведения всех бизнес-процессов
