--- a/frontend/src/sass/layout/_benefit.scss
+++ b/frontend/src/sass/layout/_benefit.scss
@@ -1,54 +1,80 @@
 .benefit {
-  &__wrapper {
+  padding-top: 29px;
+  &__insider-box {
+    position: relative;
     padding: 32px;
+    border-radius: 6px;
+    border: 2px solid #c49a6c;
     box-sizing: border-box;
-    border-radius: 6px;
-    border: solid 2px #c49a6c;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      top: 30px;
+      left: 30px;
+      right: 30px;
+      bottom: 30px;
+      border-radius: 6px;
+      border: 1px dashed #c49a6c;
+      box-sizing: border-box;
+    }
   }
-&__insider {
-    height: 100%;
-    width: 100%;
-    border-radius: 6px;
-    border: dashed 1px #c49a6c;
-    &_header {
-        margin: 50px 0;
-        font-size: 28px;
-        font-weight: bold;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        color: #192a4a;
+  &__insider {
+    position: relative;
+    z-index: 2;
+    padding: 36px 48px;
+  }
+  &__caption {
+    padding-bottom: 35px;
+  }
+  &__item {
+    position: relative;
+    padding-left: 28px;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      top: 22px;
+      left: 15px;
+      width: 5px;
+      height: 5px;
+      background-color: #03264a;
     }
-    &_items {
-        margin: 0;
-        padding-left: 20px;
-    }
-    &_item {
-        margin-top: 30px;
-        font-size: 18px;
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        color: #192a4a;
-        & .span {
-            font-weight: 900;
-        }
-        &:last-child {
-            margin-bottom: 50px;
-        }
+  }
+  &__strong {
+    font-weight: 900;
+  }
+  &__ellipse {
+    position: relative;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      right: 0;
+      bottom: 7px;
+      width: 113px;
+      height: 113px;
+      background-image: url(../svg/ellipse2.svg);
+      background-repeat: no-repeat;
+      background-size: 100%;
     }
   }
   &__footer {
+    position: relative;
+    z-index: 2;
     padding: 50px 0;
-    font-size: 28px;
     font-weight: 600;
     font-style: italic;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #192a4a;
+  }
+}
+
+@media (max-width: 767px) {
+  .benefit {
+    &__insider-box {
+      padding: 15px;
+    }
+    &__insider {
+      padding: 30px 20px;
+    }
   }
 }
