--- a/frontend/src/pages/index/_about.pug
+++ b/frontend/src/pages/index/_about.pug
@@ -1,18 +1,16 @@
-.about
+section.about
     ._container._row
-        .about__insider._col-lg-6._offset-lg-5
-            .about__logo
-                img.header__logo(src="../svg/logo2.svg")
-            .about__text 
-                | Современные тенденции выводят заботу о здоровье собственного
-                br
-                | организма на первый план. Отказываясь от бесплатных услуг
-                br
-                | государственных лечебных учреждений, клиенты прибегают к услугам
-                br
-                | специализированных частных клиник и диагностических центров,
-                br
-                | что влечет за собой возрастание популярности подобных заведений
-                br
-                |в качестве перспективного вида предпринимательской деятельности
-                img.about__print(src="../svg/ico.svg")
+        ._col-lg-5
+            img.about__woman(src="../img/pic2.png")
+        .about__insider._col-lg-6
+            .about__logo-box
+                img.about__logo(src="../svg/logo2.svg")
+            .about__text-box
+                .about__text
+                    | Современные тенденции выводят заботу о&nbsp;здоровье собственного
+                    | организма на&nbsp;первый план. Отказываясь от&nbsp;бесплатных услуг
+                    | государственных лечебных учреждений, клиенты прибегают
+                    | к&nbsp;услугам специализированных частных клиник
+                    | и&nbsp;диагностических центров, что влечет за&nbsp;собой возрастание
+                    | популярности подобных заведений в&nbsp;качестве перспективного
+                    | вида предпринимательской деятельности
