--- a/frontend/src/sass/layout/_about.scss
+++ b/frontend/src/sass/layout/_about.scss
@@ -1,35 +1,55 @@
 .about {
-  & ._container {
-    position: relative;
-    &::after {
-      content: "";
-      display: block;
-      background-image: url("../img/pic.png");
-      position: absolute;
-      width: 594.5px;
-      height: 649.8px;
-      left: -57px;
-      top: -78px;
-    }
+  margin-top: 1209px;
+  overflow: hidden;
+  &__woman {
+    width: 100%;
+    max-width: 470px;
+    margin: 0 auto;
   }
-  &__insider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  &__logo-box {
+    padding-top: 81px;
   }
   &__logo {
-    margin-top: 100px;
+    width: 100%;
+    max-width: 196px;
+    margin: 0 auto;
+  }
+  &__text-box {
+    position: relative;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      right: 0;
+      bottom: 0;
+      width: 106px;
+      height: 106px;
+      transform: translate(52px, 80px);
+      background-image: url(../svg/ico.svg);
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
   }
   &__text {
-    margin-top: 27px;
-    margin-bottom: 266px;
-    text-align: right;
     position: relative;
+    z-index: 2;
+    padding-top: 27px;
+    text-align: right;
   }
   &__print {
     position: absolute;
     top: 72px;
     right: -52px;
+  }
+}
+
+@media (max-width: 992px) {
+  .about {
+    &__insider {
+      order: -1;
+    }
+    &__text {
+      text-align: left;
+    }
   }
 }
