--- a/frontend/src/pages/index/_about.pug
+++ b/frontend/src/pages/index/_about.pug
@@ -1,7 +1,7 @@
 section.about
     ._container._row
         ._col-lg-5
-            img.about__woman(src="../img/pic2.png")
+            img.about__woman(src="../img/pic.png")
         .about__insider._col-lg-6
             .about__logo-box
                 img.about__logo(src="../svg/logo2.svg")
