--- a/frontend/src/pages/index/_about.pug
+++ b/frontend/src/pages/index/_about.pug
@@ -4,7 +4,7 @@ section.about
             img.about__woman(src="../img/pic.png")
         .about__insider._col-lg-6
             .about__logo-box
-                img.about__logo(src="../svg/logo2.svg")
+                img.about__logo(src="../svg/logo2.svg" "3D Dental")
             .about__text-box
                 .about__text
                     | Современные тенденции выводят заботу о&nbsp;здоровье собственного
