--- a/frontend/src/pages/index/_header.pug
+++ b/frontend/src/pages/index/_header.pug
@@ -1,7 +1,7 @@
 header.header
     ._container._row._s
         ._col-12._col-lg-10._offset-lg-1._row._ptb-n.header__logoWpapper
-            img.header__logo(src="../svg/logo.svg")
+            img.header__logo(src="../svg/logo.svg" alt="3D Dental")
         h1._col-12._col-lg-10._offset-lg-1.header__caption
             | Откройте свой собственный
             br
