--- a/frontend/src/pages/layout/_footer.pug
+++ b/frontend/src/pages/layout/_footer.pug
@@ -1,22 +1,26 @@
-footer.footer
-    ._container._row.footer__insider
-        h2._offset-lg-1
-            | На основе 30 летнего опыта мы знаем, 
-            br
+footer.footer._s
+    ._container._row
+        .footer__insider
+        h3.footer__caption._col-12._col-md-8._col-lg-6._offset-lg-1
+            | На&nbsp;основе 30&nbsp;летнего опыта мы&nbsp;знаем,
             | как сделать бизнес успешным!
-        h3._offset-lg-1
-            | Станьте нашим партнером «3D Dental» и начните 
+        .footer__text._col-12._col-lg-6._offset-lg-1
+            | Станьте нашим партнером &laquo;3D&nbsp;Dental&raquo; и&nbsp;начните
             br
-            | зарабатывать от 2 500 000 тенге в месяц!
-        input.input._offset-lg-1(type="text" placeholder="Ваше имя")    
-        input.input._offset-lg-1(type="tel" placeholder="Ваш телефон")    
-        input.input._offset-lg-1(type="email" placeholder="Ваш e-mail")    
-        button.button.footer__button._offset-lg-1 Связаться с франчайзером
-        ul.footer__contacts._row._offset-lg-1 
-            li._col-12._col-lg-6 Office.dent@bk.ru
-            li._col-12._col-lg-6 Казахстан
-            li._col-12._col-lg-6 8-701-141-71-38
-            li._col-12._col-lg-6 г. Нур-Султан
-            li._col-12._col-lg-6 www.3d-dental.kz
-            li._col-12._col-lg-6 ул. Кабанбай батыра, 12
-        
+            | зарабатывать от&nbsp;2&nbsp;500&nbsp;000 тенге в&nbsp;месяц!
+        ._col-12._col-lg-6._offset-lg-1
+            input.input(type="text" placeholder="Ваше имя")
+        ._col-12._col-lg-6._offset-lg-1
+            input.input(type="tel" placeholder="Ваш телефон")
+        ._col-12._col-lg-6._offset-lg-1
+            input.input(type="email" placeholder="Ваш e-mail")
+        ._col-12._col-lg-11._offset-lg-1.footer__button-box
+            button.button Связаться с&nbsp;франчайзером
+        ._col-12._col-md-6._offset-lg-1.footer__list
+            .footer__item Office.dent@bk.ru
+            .footer__item 8-701-141-71-38
+            .footer__item www.3d-dental.kz
+        ._col-12._col-md-6.footer__list
+            .footer__item Казахстан
+            .footer__item г. Нур-Султан
+            .footer__item ул. Кабанбай батыра, 12
