--- a/frontend/src/sass/layout/_footer.scss
+++ b/frontend/src/sass/layout/_footer.scss
@@ -1,88 +1,60 @@
 .footer {
-  min-height: 887px;
+  position: relative;
   background-image: url("../img/footer-bg.jpg");
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 85px 0 80px;
+  &__caption {
+
+  }
+  &__text {
+    padding-bottom: 35px;
+    font-weight: 900;
+  }
   &__insider {
-    position: relative;
-    flex-direction: column;
-    &::after {
-      content: "";
-      display: block;
-      background-image: url("../img/opreation-starts-in-ten-minutes.png");
-      position: absolute;
-      width: 978px;
-      height: 1055.69px;
-      right: -235px;
-      top: -100px;
-    }
-    h2 {
-      margin-top: 100px;
-      font-size: 28px;
-      font-weight: bold;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      color: #ffffff;
-    }
-    h3 {
-      margin-top: 30px;
-      font-size: 18px;
-      font-weight: 900;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      color: #ffffff;
-    }
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 0;
+    bottom: 0;
+    background-image: url("../img/woman.png");
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: left bottom;
   }
-  &__button {
-    margin-top: 50px;
+  &__button-box {
+    padding: 35px 15px 80px;
   }
-  &__contacts {
-    margin-top: 90px;
-    display: flex;
-    flex-wrap: wrap;
-    height: 81px;
+  &__list {
     font-size: 14px;
-    max-width: 350px;
-    min-height: 64px;
-    padding: 0;
-    & li {
-      padding: 0;
-      color: #ffffff;
-      list-style-type: none;
-      margin-top: 10px;
-    }
+    max-width: 190px;
+  }
+  &__item {
+    padding: 5px 0;
   }
 }
 .input {
-  margin-top: 30px;
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
   height: 50px;
+  padding: 5px 30px;
   border-radius: 6px;
   background-color: #ffffff;
-  font-size: 18px;
   font-weight: 300;
-  font-style: italic;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: black;
-  padding-left: 30px;
   box-sizing: border-box;
-  &:nth-of-type(1) {
-    margin-top: 50px;
-  }
   &::placeholder {
     font-size: 14px;
     font-weight: 300;
     font-style: italic;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
     color: #c6a874;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer {
+    &__insider {
+      display: none;
+    }
   }
 }
