--- a/frontend/src/pages/index.pug
+++ b/frontend/src/pages/index.pug
@@ -2,9 +2,10 @@ extends layout/main
 
 block content
     include index/_header
+    include index/_business
+    include index/_photo
     include index/_about
     include index/_benefit
     include index/_conditions
     include index/_package
     include index/_steps
-    
