--- a/frontend/src/sass/layout/_business.scss
+++ b/frontend/src/sass/layout/_business.scss
@@ -24,10 +24,21 @@
     padding: 19px 15px;
   }
   &__line {
+    position: relative;
     width: 100%;
-    height: 4px;
+    height: 52px;
     transform: translateX(-35%);
-    background-color: #d3ab72;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      height: 4px;
+      left: 0;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: #d3ab72;
+    }
   }
   &__big-text {
     display: inline-block;
