Add button icon

--- a/frontend/src/pages/index/_header.pug
+++ b/frontend/src/pages/index/_header.pug
@@ -30,5 +30,7 @@ header.header
                 span.header__text-small
                     | взрослые и&nbsp;дети от&nbsp;6&nbsp;лет
         ._col-12._col-lg-10._offset-lg-1._ptb-n.header__buttonDownload
-            button.button Скачать презентацию
+            button.button.header__btn
+                i._btn-ico
+                | Скачать презентацию
         
