--- a/frontend/src/pages/index/_package.pug
+++ b/frontend/src/pages/index/_package.pug
@@ -30,5 +30,6 @@ section.package._s
                 .package__text
                     | Роялти с 3 месяца 13%
                 .package__btn-box
-                    button.button
+                    button.button.package__btn
+                        i._btn-ico
                         | Задать вопрос
