--- a/frontend/src/pages/layout/_footer.pug
+++ b/frontend/src/pages/layout/_footer.pug
@@ -15,7 +15,9 @@ footer.footer._s
         ._col-12._col-lg-6._offset-lg-1
             input.input(type="email" placeholder="Ваш e-mail")
         ._col-12._col-lg-11._offset-lg-1.footer__button-box
-            button.button Связаться с&nbsp;франчайзером
+            button.button.footer__btn
+                i._btn-ico
+                | Связаться с&nbsp;франчайзером
         ._col-12._col-md-6._offset-lg-1.footer__list
             .footer__item Office.dent@bk.ru
             .footer__item 8-701-141-71-38
